<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Katchup</string>
    <string name="katchup_expired_explanation">This version of Katchup is too old and can no longer be used. Please go to the Google Play Store and download the latest release.</string>
    <plurals name="katchup_expiration_days_left">
        <item quantity="one">This version of Katchup will expire in %d day. Please go to the Google Play Store and download the latest release.</item>
        <item quantity="other">This version of Katchup will expire in %d days. Please go to the Google Play Store and download the latest release.</item>
    </plurals>
    <string name="calendar_privacy_note">your calendar is only visible to you</string>
    <string name="failed_to_follow">Following failed</string>
    <string name="failed_to_unfollow">Unfollowing failed</string>
    <string name="failed_to_block">Blocking failed</string>
    <string name="failed_to_unblock">Unblocking failed</string>
    <!-- Text linking to phone number privacy explanation -->
    <string name="phone_number_privacy_link">why we’re asking for your phone number</string>
    <!-- Text describing further phone verification steps -->
    <string name="phone_number_verification_instructions">You’ll receive a verification code. Carrier rates may apply.</string>
    <!-- text label for name/nickname entry field -->
    <string name="name_entry_title">what is your name?</string>>
    <!-- text label for username entry field -->
    <string name="username_entry_title">claim your username</string>
    <!-- text explaining username uniqueness and how to changeability -->
    <string name="username_uniqueness_info">your username will be unique and you can change it up later</string>
    <!-- text hint for registration entry field -->
    <string name="registration_name_hint">name</string>
    <!-- text hint for username entry field -->
    <string name="registration_username_hint">\@username</string>
    <!-- error texts indicating that a username was too short  -->
    <string name="reg_username_error_too_short">username is too short</string>
    <!-- error texts indicating that a username was too long  -->
    <string name="reg_username_error_too_long">username is too long</string>
    <!-- error texts indicating that a username has a bad format and is invalid -->
    <string name="reg_username_error_bad_expression">username has invalid characters</string>
    <!-- error texts indicating that a username must start with invalid character -->
    <string name="reg_username_error_leading_char_invalid">invalid starting character</string>
    <!-- error texts indicating that a username is already taken -->
    <string name="reg_username_error_not_unique">sorry, \@%s is already taken 🥲</string>
    <!-- error texts indicating that a username validation failed for unspecified reason  -->
    <string name="reg_username_error_unknown">unexpected error</string>
    <!-- title of the profile picture update menu -->
    <string name="profile_picture_menu_title">change your profile picture</string>
    <!-- profile picture menu option to update it from the photo library -->
    <string name="profile_picture_library">photo library</string>
    <!-- profile picture menu option to update it using the camera -->
    <string name="profile_picture_camera">camera</string>
    <!-- profile picture menu option to remove the picture -->
    <string name="profile_picture_remove">remove profile picture</string>
    <!-- design requires cancel to be lowercase -->
    <string name="cancel_lowercase">cancel</string>
    <!-- text of button used to request contacts access permission -->
    <string name="request_contacts_permission_button">enable contacts</string>
    <!-- text of button used to request location access permission -->
    <string name="request_location_permission_button">enable location</string>
    <!-- text encouraging the user to enable contacts and location access for optimal experience -->
    <string name="contacts_and_location_access_prompt">for the best experience enable contacts and location</string>
    <!-- privacy statement text about contacts and location access -->
    <string name="contacts_and_location_privacy_statement">our focus is on your privacy so your information will never be shared.</string>
    <!-- text of contacts permission access request prompt -->
    <string name="contacts_access_request_rationale">“Katchup” would like to access your contacts.\nThis will allow you to connect with your friends on Katchup, and see their posts.</string>
    <!-- text of location permission access request prompt -->
    <string name="location_access_request_rationale">“Katchup” would like to access your location.\nThis will allow you to see what people nearby are up to, and share your posts with a more relevant audience.</string>
    <!-- text of location permission access request prompt, but it has already been denied -->
    <string name="location_access_request_rationale_denied">“Katchup” would like to access your location.\nThis will allow you to see what people nearby are up to, and share your posts with a more relevant audience.\n\nOpen the app settings screen to modify app permissions.</string>
    <!-- text of deny button in request permission dialog -->
    <string name="permission_negative_button_text">Don\'t Allow</string>
    <!-- name label on profile update screen -->
    <string name="profile_name">Name</string>
    <!-- username label on profile update screen -->
    <string name="profile_username">Username</string>
    <!-- bio label on profile update screen -->
    <string name="profile_bio">Bio</string>
    <!-- links label on profile update screen -->
    <string name="profile_links">Links</string>
    <!-- hint inviting users to add links on profile update screen -->
    <string name="links_hint">add links</string>
    <!-- label for TikTok handle on profile -->
    <string name="tiktok">TikTok</string>
    <!-- label for Instagram handle on profile -->
    <string name="instagram">Instagram</string>
    <!-- label for Snapchat handle on profile -->
    <string name="snapchat">Snapchat</string>
    <!-- label for user defined link on profile -->
    <string name="profile_link">Link</string>
    <!-- error message when the reason for the error is unknown -->
    <string name="error_unknown">unknown error, try again later</string>
    <!-- error message when the bio sent by the user is too long -->
    <string name="bio_too_long">bio is too long</string>
    <!-- error message on invalid user defined link -->
    <string name="error_invalid_link">invalid link</string>
    <!-- error message on invalid social network username -->
    <string name="error_invalid_username">invalid username</string>
    <string name="request_location_access_banner">🏝 🍅 tap to enable location</string>
</resources>
