<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_dark"
    android:orientation="vertical"
    tools:context=".katchup.ProfileEditActivity">

    <LinearLayout
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/ic_close_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_primary_light"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/color_primary_light"
            android:text="@string/done"/>

    </LinearLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/profile_links"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="22dp"
        android:layout_marginBottom="18dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/profile_link"/>

        <TextView
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white_40"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/white"
            android:drawablePadding="4dp"
            android:textSize="16sp"
            android:textColor="@color/white_40"
            android:textAlignment="textEnd"
            tools:text="cargo.site/defne" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="22dp"
        android:layout_marginBottom="18dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/tiktok"/>

        <TextView
            android:id="@+id/tiktok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white_40"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/white"
            android:drawablePadding="4dp"
            android:textSize="16sp"
            android:textColor="@color/white_40"
            android:textAlignment="textEnd"
            tools:text="\@defne" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="22dp"
        android:layout_marginBottom="18dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/snapchat"/>

        <TextView
            android:id="@+id/snapchat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white_40"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/white"
            android:drawablePadding="4dp"
            android:textSize="16sp"
            android:textColor="@color/white_40"
            android:textAlignment="textEnd"
            tools:text="\@defne" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="22dp"
        android:layout_marginBottom="18dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/instagram"/>

        <TextView
            android:id="@+id/instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white_40"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawableTint="@color/white"
            android:drawablePadding="4dp"
            android:textSize="16sp"
            android:textColor="@color/white_40"
            android:textAlignment="textEnd"
            tools:text="\@defne" />

    </LinearLayout>

</LinearLayout>
